fix ingame gap

--- a/src/pages/InGame.css
+++ b/src/pages/InGame.css
@@ -114,7 +114,7 @@
     -webkit-backdrop-filter: blur( 5px );
     width: 1600px;
     height: 100px;
-    margin: 15px 0 15px 0;
+    margin: 10px 0 10px 0;
     transition: all 200ms;
     cursor: pointer;
     color: #929293;
@@ -131,7 +131,7 @@
     -webkit-backdrop-filter: blur( 5px );
     width: 1600px;
     height: 100px;
-    margin: 15px 0 15px 0;
+    margin: 10px 0 10px 0;
     transition: all 200ms;
     cursor: pointer;
     color: #929293;
